2014-01-09 Niels Grewe <niels.grewe@halbordnung.de>

	* Examples/GlobalMenu/GlobalMenuTheme.m:
	Fall back to in-window menus if the menu server is not
	available.	

2014-01-08 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethodCall.m
	* Source/DKMethod.m
	* Source/DKMessage.m
	* Source/DKPropertyMethod.m
	* Source/DKPort.m:
	String format safety improvements.
	* Source/DKArgument.m: Fix bug in NSData unmarshalling.
	* Tests/TestDKArgument.m: Testcase for NSData boxing/unboxing
	of byte arrays.
	* Tests/TestDKProxy.m:
	Tweak system port test case.

2014-01-06 Niels Grewe <niels.grewe@halbordnung.de>
	
	* README: Regenerate
	* Source/DKEndpointManager.m
	* Source/DKInterface.m:
	Format string safety improvements.
	* Source/DKSignal.h
	* Source/DKSignal.m:
	Add method to marshall the contents of a notification's 
	user info dictionary into D-Bus wire format.


2014-01-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Bundles/DBusMenu/DKMenuRegistry.m:
	Use the standard -windowDevice: method instead of
	the custom one.

2014-01-04 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Decode byte arrays as NSData
	if the introspection data says we should.

2014-01-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/DKStruct.h
	* Headers/DBusKit.h
	* Source/DKStruct.m:
	Helper class for structure-like arrays. This is needed 
	only for variant typed arguments because these don't
	carry the introspection information that lets us decide
	whether something is an array or a D-Bus structure
	* Source/DKArgument.m:
	Support explicit structure typed arguments and start
	working on support for converting from NSData to D-Bus
	byte arrays.

2013-12-30 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethod.m 
	* Source/DKMethodReturn.m:
	Fix unmarshalling of arguments in an incoming D-Bus method call.

2013-12-30 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Improve validity checking on object
	paths.
